--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Olá, UDESC!</h1>
     <img src="https://lh6.googleusercontent.com/proxy/KkmqQryciWg2LFCzfFFvYz0O_TxyiYQKUHouMlAC6dLPwVmrnTt_3CImtS-2jGlJMbHfbdHT-LYvj7udITgdUBombpjPJOMGpxWsEysRY2VJDXMLVg" alt="UDESC">
-    <form action="../back-end/index.php">
+    <form action="../back-end/index.php" method="postgit">
+        Nome:<input type="text" name="nome" id="nome">
+        Idade:<input type="number" name="idade" id="idade">
         <input type="submit" value="Clique Aqui">
     </form>
 </body>
