Adição no Banco de Dados

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,11 +6,14 @@
     <title>UDESC</title>
 </head>
 <body>
-    <h1>Olá, UDESC!</h1>
-    <img src="https://lh6.googleusercontent.com/proxy/KkmqQryciWg2LFCzfFFvYz0O_TxyiYQKUHouMlAC6dLPwVmrnTt_3CImtS-2jGlJMbHfbdHT-LYvj7udITgdUBombpjPJOMGpxWsEysRY2VJDXMLVg" alt="UDESC">
-    <form action="../back-end/index.php" method="postgit">
-        Nome:<input type="text" name="nome" id="nome">
-        Idade:<input type="number" name="idade" id="idade">
+    <img height="100" width="140" src="https://lh6.googleusercontent.com/proxy/KkmqQryciWg2LFCzfFFvYz0O_TxyiYQKUHouMlAC6dLPwVmrnTt_3CImtS-2jGlJMbHfbdHT-LYvj7udITgdUBombpjPJOMGpxWsEysRY2VJDXMLVg" alt="UDESC">
+    <form action="../back-end/index.php" method="post">
+        Nome:<input type="text" name="usuario" id="usuario">
+        <br><br>
+        E-mail:<input type="email" name="email" id="email">
+        <br><br>
+        Senha:<input type="password" name="senha" id="senha">
+        <br><br>
         <input type="submit" value="Clique Aqui">
     </form>
 </body>
